@@ -1,4 +1,6 @@
 Kalotaszeg utca	1
+Kalotaszeg utca	1/1
+Kalotaszeg utca	1/2
 Kalotaszeg utca	3
 Kalotaszeg utca	5
 Kalotaszeg utca	7
